tests/paczka1/fuzzy1/79950265.err
Error in line 7: zPbr A912 384,6
Error in line 18: jBEM45 S907 67,3
Error in line 30: cjCWl S158 58,0
Error in line 35: jBEM45 S158 28,5
